gcc/testsuite/rust/rustc/ui/lowering/issue-121108.rs
#![derive(Clone, Copy)] // { dg-error "" "" { target *-*-* } }

use std::ptr::addr_of;

const UNINHABITED_VARIANT: () = unsafe {
    let v = *addr_of!(data).cast();
};

fn main() {}

